Add support for corsica provided requests.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "corsica-xkcd",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A Corsica plugin to display XKCD comics.",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mythmon/corsica-xkcd",
   "dependencies": {
     "es6-promise": "~0.1.1",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "corsica": "~0.1.0"
   }
 }
